--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -32,10 +32,27 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    
   </head>
-  <body>
+  <style>
+    .footy {
+      /* position: absolute; */
+      margin-top: auto;
+      color: #020202;
+      padding-top: 1em;
+      height: 4rem;
+      width: 100%;
+      font-weight: 500;
+      background: transparent;
+    }
+  </style>
+  <body class="d-flex flex-column h-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div class="footy text-center">
+      2020 Copyright \\ g Valenzuela
+    </div>
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
